# NewsAnalizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  dev-requirements.in  dev-requirements.txt  main.py  pyproject.toml  requirements.in  requirements.txt  version.py
.github/workflows/: main.yml
configs/: bandit.yml  mypy.ini
docs/: ARCHITECTURE.md  INDEX.md  MAKEFILE.md  PIPELINE.md  RUNBOOK.md  STACK.md  mypy-files.txt
src/: ai_core.py  constants.py  contracts.py  logger.py  parser.py  session_manager.py  settings.py
src/bot/: analyzing_service.py  bot_utils.py  sender.py
src/tests/: conftest.py  test_ai_core.py  test_analyzing_service.py  test_bot_utils.py  test_constants.py  test_contracts.py  test_logger.py  test_main.py  test_parser.py  test_sender.py  test_session_manager.py  test_settings.py
